// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonUnstyled when asked to render disabled matches snapshot 1`] = `
<button
  aria-label="Test button label"
  className=""
  data-test-id="test-button"
  disabled={true}
  id="test-button"
  type="button"
>
  Test Button
</button>
`;

exports[`ButtonUnstyled when asked to render with additional class matches snapshot 1`] = `
<button
  aria-label="Test button label"
  className="some-class"
  data-test-id="test-button"
  id="test-button"
  type="button"
>
  Test Button
</button>
`;

exports[`ButtonUnstyled when asked to render with children matches snapshot 1`] = `
<button
  aria-label="Test button label"
  className=""
  data-test-id="test-button"
  id="test-button"
  type="button"
>
  Test Button
</button>
`;
